@@ -1,3 +1,9 @@
+2009-12-03  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/42049
+	* builtins.c (expand_builtin_strcpy_args): Handle COMPOUND_EXPRs
+	potentially returned from folding strcpy.
+
 2009-12-02  Chao-ying Fu  <fu@mips.com>
 
 	Backport from mainline
